<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.testapp.MainActivity"
    tools:ignore="MergeRootFrame" >

    <EditText
        android:id="@+id/editMessage"
        android:layout_width="fill_parent"
        android:layout_height="98dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <RadioGroup
        android:id="@+id/rgDayOrEvening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/day_time" />

        <RadioButton
            android:id="@+id/radioEvening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evening" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/newDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newDate" />

        <TextView
            android:id="@+id/newDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty" />

    </LinearLayout>

</LinearLayout>